# xunit-repo-client

./: Cargo.toml  Dockerfile  README.md  example-xunit-repo-client.toml
src/: assemble.rs  clap_fern.rs  cli_clap.rs  cli_env.rs  cli_toml.rs  config.rs  error.rs  main.rs  parse_glob.rs  upload.rs
src/configuration/: clap.rs  environment.rs  mod.rs  toml.rs
src/into/: file.rs  mod.rs
