[package]
name = "xunit-repo-client"
version = "0.1.0"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "*"
thiserror = "*"
xunit-repo-interface = { git = "https://github.com/osynge/xunit-repo-interface.git", branch = "main" }
clone_with_default = { git = "https://github.com/osynge/clone-with-default.git", branch = "main" }
clone_with_default_derive = { git = "https://github.com/osynge/clone-with-default.git", branch = "main" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
fern = "*"
log = "0.4"
clap = "2"
chrono = "*"
toml = "*"
serde = "*"
serde_derive = "*"
dirs = "*"
# only for static compilation for minimal alpine docker builds
libsqlite3-sys = { version = "*", features = ["bundled"], optional=true}
