[package]
name = "xunit-repo-client"
version = "0.1.0"
authors = ["Owen Synge <osynge@googlemail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
thiserror = "1"
xunit-repo-interface = { git = "https://github.com/osynge/xunit-repo-interface.git", branch = "main" }
converge = "0.0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
fern = "0.6"
log = "0.4"
clap = { version = "4",  features = ["cargo"]}
chrono = "0.4"
toml = "0.7"
serde = "1"
serde_derive = "1"
dirs = "4"
# only for static compilation for minimal alpine docker builds
libsqlite3-sys = { version = "*", features = ["bundled"], optional=true}
